--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 		
 		<!-- ContactForm -->
-		<script type="text/javascript" src="./src/contactForm.js"></script>
+		<script type="text/javascript" src="src/contactForm.js"></script>
 
 	</body>
 </html>
