fixxed about me background

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</blockquote>
 
 		<!-- About and Contact Section -->
-		<section id="about-contact" style="background: url('./aboutMeBackground.jpg') no-repeat center center; background-size: contain;">
+		<section id="about-contact" style="background: url('./aboutMeBackground.jpg') no-repeat center center, #1e1e1e; background-size: cover;">
 			
 			<div class="about-container">
 			<h2>ABOUT ME</h2>
