new metadata update

--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Valentin Gundlach | Software & Game Developer</title>
-		<link rel="icon" type="image/png" href="./logos/Logo.png">
-        <link rel="apple-touch-icon" href="./logos/Logo.png">
+		<meta name="description" content="Portfolio of Valentin Gundlach, a Software & Game Developer specializing in interactive 3D web experiences, game mechanics, and high-performance code.">
+		<meta name="keywords" content="Game Developer, Software Engineer, Portfolio, Three.js, Game Programming, WebDev, Valentin Gundlach">
+		<meta property="og:title" content="Valentin Gundlach | Software & Game Developer">
+		<meta property="og:description" content="Explore my latest projects in game development and software engineering. Built with passion and precision.">
+		<meta property="og:image" content="https://valentingundlach.com/logos/Logo960.png">
+		<meta property="og:url" content="https://valentingundlach.com">
+		<meta name="twitter:card" content="summary_large_image">
+
+
+
+		<link rel="icon" type="image/png" href="./logos/Logo28V.png" sizes="48x48">
+		<link rel="icon" type="image/png" href="/logos/Logo960.png" sizes="960x960">
+        <link rel="apple-touch-icon" href="./logos/Logo960.png">
+		<link rel="shortcut icon" href="./favicon.ico">
 		<!--For Social Icons-->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 		<!--Speeds up Font loading times-->
