--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 
 		<link rel="icon" type="image/png" href="./logos/Logo28V.png" sizes="48x48">
-		<link rel="icon" type="image/png" href="/logos/Logo960.png" sizes="960x960">
+		<link rel="icon" type="image/png" href="./logos/Logo960.png" sizes="960x960">
         <link rel="apple-touch-icon" href="./logos/Logo960.png">
-		<link rel="shortcut icon" href="./favicon.ico">
+		<link rel="shortcut icon" href="/assets/favicon-CbcLDPx3.ico">
 		<!--For Social Icons-->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 		<!--Speeds up Font loading times-->
